Continuing to work through the basics chapter

--- a/html_outputs/new_pages/editorial_style.html
+++ b/html_outputs/new_pages/editorial_style.html
@@ -756,18 +756,16 @@ cookieconsent.run({
 <p>The potential audience for this book is large. It will surely be used by people very new to R, and also by experienced R users looking for best practices and tips. So it must be both accessible and succinct. Therefore, our approach was to provide <em>just enough</em> text explanation that someone very new to R can apply the code and follow what the code is doing.</p>
 <p>A few other points:</p>
 <ul>
-<li>This is a code reference book accompanied by relatively brief examples - <em>not</em> a thorough textbook on R or data science<br>
-</li>
-<li>This is a <em>R handbook</em> for use within applied epidemiology - not a manual on the methods or science of applied epidemiology<br>
-</li>
-<li>This is intended to be a living document - optimal R packages for a given task change often and we welcome discussion about which to emphasize in this handbook</li>
+<li>This is a code reference book accompanied by relatively brief examples - <em>not</em> a thorough textbook on R or data science.</li>
+<li>This is a <em>R handbook</em> for use within applied epidemiology - not a manual on the methods or science of applied epidemiology.</li>
+<li>This is intended to be a living document - optimal R packages for a given task change often and we welcome discussion about which to emphasize in this handbook.</li>
 </ul>
 <section id="r-packages" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="r-packages">R packages</h3>
 <p><strong>So many choices</strong></p>
 <p>One of the most challenging aspects of learning R is knowing which R package to use for a given task. It is a common occurrence to struggle through a task only later to realize - hey, there’s an R package that does all that in one command line!</p>
-<p>In this handbook, we try to offer you at least two ways to complete each task: one tried-and-true method (probably in <strong>base</strong> R or <strong>tidyverse</strong>) and one special R package that is custom-built for that purpose. We want you to have a couple options in case you can’t download a given package or it otherwise does not work for you.</p>
-<p>In choosing which packages to use, we prioritized R packages and approaches that have been tested and vetted by the community, minimize the number of packages used in a typical work session, that are stable (not changing very often), and that accomplish the task simply and cleanly</p>
+<p>In this handbook, we try to offer you at least two ways to complete each task: one tried-and-true method (probably in <strong>base</strong> R or <strong>tidyverse</strong>) and one special R package that is custom-built for that purpose. We want you to have a couple of options in case you can’t download a given package or it otherwise does not work for you.</p>
+<p>In choosing which packages to use, we prioritized R packages and approaches that have been tested and vetted by the community, minimized the number of packages used in a typical work session, focused on packages that are stable (not changing very often), and that accomplish the task simply and cleanly.</p>
 <p>This handbook generally prioritizes R packages and functions from the <strong>tidyverse</strong>. Tidyverse is a collection of R packages designed for data science that share underlying grammar and data structures. All tidyverse packages can be installed or loaded via the <strong>tidyverse</strong> package. Read more at the <a href="https://www.tidyverse.org/">tidyverse website</a>.</p>
 <p>When applicable, we also offer code options using <strong>base</strong> R - the packages and functions that come with R at installation. This is because we recognize that some of this book’s audience may not have reliable internet to download extra packages.</p>
 <p><strong>Linking functions to packages explicitly</strong></p>
@@ -779,13 +777,13 @@ cookieconsent.run({
 <h3 class="unnumbered anchored" data-anchor-id="code-style">Code style</h3>
 <p>In the handbook, we frequently utilize “new lines”, making our code appear “long”. We do this for a few reasons:</p>
 <ul>
-<li>We can write explanatory comments with <code>#</code> that are adjacent to each little part of the code<br>
+<li>We can write explanatory comments with <code>#</code> that are adjacent to each little part of the code.<br>
 </li>
-<li>Generally, longer (vertical) code is easier to read<br>
+<li>Generally, longer (vertical) code is easier to read.<br>
 </li>
-<li>It is easier to read on a narrow screen (no sideways scrolling needed)<br>
+<li>It is easier to read on a narrow screen (no sideways scrolling needed).<br>
 </li>
-<li>From the indentations, it can be easier to know which arguments belong to which function</li>
+<li>From the indentations, it can be easier to know which arguments belong to which function.</li>
 </ul>
 <p>As a result, code that <em>could</em> be written like this:</p>
 <div class="cell">
@@ -808,7 +806,7 @@ cookieconsent.run({
 <section id="nomenclature" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="nomenclature">Nomenclature</h3>
 <p>In this handbook, we generally reference “columns” and “rows” instead of “variables” and “observations”. As explained in this primer on <a href="https://tidyr.tidyverse.org/articles/tidy-data.html">“tidy data”</a>, most epidemiological statistical datasets consist structurally of rows, columns, and values.</p>
-<p><em>Variables</em> contain the values that measure the same underlying attribute (like age group, outcome, or date of onset). <em>Observations</em> contain all values measured on the same unit (e.g.&nbsp;a person, site, or lab sample). So these aspects can be more difficult to tangibly define.</p>
+<p><em>Variables</em> contain the values that measure the same underlying attribute (like age group, outcome, or date of onset). <em>Observations</em> contain all values measured on the same unit (e.g.&nbsp;a person, site, or lab sample). These aspects can be more difficult to tangibly define.</p>
 <p>In “tidy” datasets, each column is a variable, each row is an observation, and each cell is a single value. However some datasets you encounter will not fit this mold - a “wide” format dataset may have a variable split across several columns (see an example in the <a href="#pivoting">Pivoting data</a> page). Likewise, observations could be split across several rows.</p>
 <p>Most of this handbook is about managing and transforming data, so referring to the concrete data structures of rows and columns is more relevant than the more abstract observations and variables. Exceptions occur primarily in pages on data analysis, where you will see more references to variables and observations.</p>
 </section>
@@ -932,24 +930,24 @@ cookieconsent.run({
 </table>
 <p><strong>NEWS</strong> With version 1.0.1 the following changes have been implemented:</p>
 <ul>
-<li>Update to R version 4.2<br>
+<li>Update to R version 4.2.<br>
 </li>
-<li>Data cleaning: switched {linelist} to {matchmaker}, removed unnecessary line from <code>case_when()</code> example<br>
+<li>Data cleaning: switched {linelist} to {matchmaker}, removed unnecessary line from <code>case_when()</code> example.<br>
 </li>
-<li>Dates: switched {linelist} <code>guess_date()</code> to {parsedate} <code>parse_date()</code></li>
-<li>Pivoting: slight update to <code>pivot_wider()</code> <code>id_cols=</code><br>
+<li>Dates: switched <strong>linelist</strong> <code>guess_date()</code> to <strong>parsedate</strong> <code>parse_date()</code>.</li>
+<li>Pivoting: slight update to <code>pivot_wider()</code> <code>id_cols=</code>.<br>
 </li>
-<li>Survey analysis: switched <code>plot_age_pyramid()</code> to <code>age_pyramid()</code>, slight change to alluvial plot code<br>
+<li>Survey analysis: switched <code>plot_age_pyramid()</code> to <code>age_pyramid()</code>, slight change to alluvial plot code.<br>
 </li>
-<li>Heat plots: added <code>ungroup()</code> to <code>agg_weeks</code> chunk<br>
+<li>Heat plots: added <code>ungroup()</code> to <code>agg_weeks</code> chunk.<br>
 </li>
-<li>Interactive plots: added <code>ungroup()</code> to chunk that makes <code>agg_weeks</code> so that <code>expand()</code> works as intended<br>
+<li>Interactive plots: added <code>ungroup()</code> to chunk that makes <code>agg_weeks</code> so that <code>expand()</code> works as intended.<br>
 </li>
-<li>Time series: added <code>data.frame()</code> around objects within all <code>trending::fit()</code> and <code>predict()</code> commands<br>
+<li>Time series: added <code>data.frame()</code> around objects within all <code>trending::fit()</code> and <code>predict()</code> commands.<br>
 </li>
-<li>Combinations analysis: Switch <code>case_when()</code> to <code>ifelse()</code> and added optional <code>across()</code> code for preparing the data<br>
+<li>Combinations analysis: Switch <code>case_when()</code> to <code>ifelse()</code> and added optional <code>across()</code> code for preparing the data.<br>
 </li>
-<li>Transmission chains: Update to more recent version of {epicontacts}</li>
+<li>Transmission chains: Update to more recent version of <strong>epicontacts</strong>.</li>
 </ul>
 </section>
 <section id="session-info-r-rstudio-packages" class="level2" data-number="1.4">
@@ -967,8 +965,8 @@ cookieconsent.run({
  language (EN)
  collate  English_United Kingdom.utf8
  ctype    English_United Kingdom.utf8
- tz       America/Los_Angeles
- date     2024-07-24
+ tz       Europe/London
+ date     2024-08-21
  pandoc   3.1.11 @ C:/Program Files/RStudio/resources/app/bin/quarto/bin/tools/ (via rmarkdown)
 
 ─ Packages ───────────────────────────────────────────────────────────────────
@@ -985,7 +983,7 @@ cookieconsent.run({
  rmarkdown     2.27    2024-05-17 [1] CRAN (R 4.4.1)
  rstudioapi    0.16.0  2024-03-24 [1] CRAN (R 4.4.1)
  sessioninfo   1.2.2   2021-12-06 [1] CRAN (R 4.4.1)
- xfun          0.45    2024-06-16 [1] CRAN (R 4.4.1)
+ xfun          0.46    2024-07-18 [1] CRAN (R 4.4.1)
 
  [1] C:/Users/ah1114/AppData/Local/R/win-library/4.4
  [2] C:/Program Files/R/R-4.4.1/library
