Fixing the table on object class

--- a/html_outputs/new_pages/basics.html
+++ b/html_outputs/new_pages/basics.html
@@ -1788,20 +1788,23 @@ You can think of the assignment operator <code>&lt;-</code> as the words “is d
 <col style="width: 48%">
 <col style="width: 41%">
 </colgroup>
-<thead>
-<tr class="header">
-<th>Common structure</th>
-<th>Explanation</th>
-<th>Example</th>
-</tr>
-</thead>
 <tbody>
 <tr class="odd">
-<td>Vectors</td>
-<td>A container for a sequence of singular objects, all of the same class (e.g.&nbsp;numeric, character).</td>
-<td><strong>“Variables” (columns) in data frames are vectors</strong> (e.g.&nbsp;the column <code>age_years</code>).</td>
+<td>Common structure</td>
+<td>Explanation</td>
+<td>Example</td>
 </tr>
-<tr class="even">
+</tbody>
+</table>
+<div class="line-block">Vectors | A container for a sequence of singular objects, all of the same class (e.g.&nbsp;numeric, character). | <strong>“Variables” (columns) in data frames are vectors</strong> (e.g.&nbsp;the column <code>age_years</code>). |</div>
+<table class="caption-top table">
+<colgroup>
+<col style="width: 9%">
+<col style="width: 48%">
+<col style="width: 41%">
+</colgroup>
+<tbody>
+<tr class="odd">
 <td>Data Frames</td>
 <td>Vectors (e.g.&nbsp;columns) that are bound together that all have the same number of rows.</td>
 <td><code>linelist</code> is a data frame.</td>
@@ -1814,72 +1817,59 @@ You can think of the assignment operator <code>&lt;-</code> as the words “is d
 <section id="object-classes" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="object-classes">Object classes</h3>
 <p>All the objects stored in R have a <em>class</em> which tells R how to handle the object. There are many possible classes, but common ones include:</p>
-<table class="caption-top" style="width:100%;">
-<colgroup>
-<col style="width: 4%">
-<col style="width: 61%">
-<col style="width: 34%">
-</colgroup>
+<table class="caption-top table">
 <thead>
 <tr class="header">
-<th>Class</th>
-<th>Explanation</th>
-<th>Examples</th>
+<th>Class |Explanation |Examples |</th>
+<th></th>
+<th></th>
 </tr>
 </thead>
 <tbody>
-</tbody>
-</table>
-<div class="line-block">Character | These are text/words/sentences <strong>“within quotation marks”</strong>. Math cannot be done on these objects. | “Character objects are in quotation marks” |</div>
-<table class="caption-top table">
-<tbody>
 <tr class="odd">
+<td>Character</td>
+<td>These are text/words/sentences <strong>“within quotation marks”</strong>. Math cannot be done on these objects.</td>
+<td>“Character objects are in quotation marks”</td>
+</tr>
+<tr class="even">
 <td>Integer</td>
 <td>Numbers that are <strong>whole only</strong> (no decimals)</td>
 <td>-5, 14, or 2000</td>
-<td></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Numeric</td>
 <td>These are numbers and <strong>can include decimals</strong>. If within quotation marks they will be considered character class.</td>
 <td>23.1 or 14</td>
-<td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Factor</td>
 <td>These are vectors that have a <strong>specified order</strong> or hierarchy of values</td>
 <td>An variable of economic status with ordered values</td>
+</tr>
+<tr class="odd">
+<td>Date</td>
+<td><strong>Once R is told that certain data are Dates</strong>, these data can be manipulated and displayed in special ways. See the page on <a href="../new_pages/dates.html">Working with dates</a> for more information.| 2018-04-12 or 15/3/1954 or Wed 4 Jan 1980 |</td>
 <td></td>
 </tr>
 <tr class="even">
-<td>Date</td>
-<td><strong>Once R is told that certain data are Dates</strong>, these data can be manipulated and displayed in special ways. See the page on <a href="../new_pages/dates.html">Working with dates</a> for more information. | 2018-04-12 or 15/3/1954 or Wed 4 Jan 1980</td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
 <td>Logical</td>
 <td>Values must be one of the two special values TRUE or FALSE (note these are <strong>not</strong> “TRUE” and “FALSE” in quotation marks)</td>
 <td>TRUE or FALSE</td>
-<td></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>data.frame</td>
 <td>A data frame is how R stores a <strong>typical dataset</strong>. It consists of vectors (columns) of data bound together, that all have the same number of observations (rows).</td>
 <td>The example AJS dataset named <code>linelist_raw</code> contains 68 variables with 300 observations (rows) each.</td>
-<td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>tibble</td>
 <td>tibbles are a variation on data frame, the main operational difference being that they print more nicely to the console (display first 10 rows and only columns that fit on the screen)</td>
 <td>Any data frame, list, or matrix can be converted to a tibble with <code>as_tibble()</code></td>
-<td></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>list</td>
 <td>A list is like vector, but holds other objects that can be other different classes</td>
 <td>A list could hold a single number, and a dataframe, and a vector, and even another list within it!</td>
-<td></td>
 </tr>
 </tbody>
 </table>
@@ -3359,7 +3349,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"descPosition":"bottom","openEffect":"zoom","selector":".lightbox"});
+<script>var lightboxQuarto = GLightbox({"selector":".lightbox","closeEffect":"zoom","descPosition":"bottom","openEffect":"zoom","loop":false});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
