--- a/html_outputs/new_pages/basics.html
+++ b/html_outputs/new_pages/basics.html
@@ -937,7 +937,7 @@ as of rio 1.0.3.
 </section>
 <section id="free-online-resources" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="free-online-resources">Free online resources</h3>
-<p>A definitive text is the <a href="https://r4ds.had.co.nz/">R for Data Science</a> book by Garrett Grolemund and Hadley Wickham.</p>
+<p>A definitive text is the <a href="https://r4ds.hadley.nz/">R for Data Science</a> book by Garrett Grolemund and Hadley Wickham.</p>
 <p>The <a href="https://r4epis.netlify.app/">R4Epis</a> project website aims to “develop standardised data cleaning, analysis and reporting tools to cover common types of outbreaks and population-based surveys that would be conducted in an MSF emergency response setting”. You can find R basics training materials, templates for RMarkdown reports on outbreaks and surveys, and tutorials to help you set them up.</p>
 </section>
 <section id="languages-other-than-english" class="level3 unnumbered">
@@ -2604,8 +2604,8 @@ This assignment operator can also be written as <code>=</code>. We advise use of
 </table>
 <p>Notes:</p>
 <ul>
-<li><code>*quantile()</code>: <code>x</code> is the numeric vector to examine, and <code>probs =</code> is a numeric vector with probabilities within 0 and 1.0, e.g <code>c(0.5, 0.8, 0.85)</code></li>
-<li><code>**summary()</code>: gives a summary on a numeric vector including mean, median, and common percentiles</li>
+<li><code>*quantile()</code>: <code>x</code> is the numeric vector to examine, and <code>probs =</code> is a numeric vector with probabilities within 0 and 1.0, e.g <code>c(0.5, 0.8, 0.85)</code>.</li>
+<li><code>**summary()</code>: gives a summary on a numeric vector including mean, median, and common percentiles.</li>
 </ul>
 <p><span style="color: red;"><strong><em>DANGER:</em></strong> If providing a vector of numbers to one of the above functions, be sure to wrap the numbers within <code>c()</code> .</span></p>
 <div class="cell">
@@ -2724,11 +2724,11 @@ This assignment operator can also be written as <code>=</code>. We advise use of
 <h2 data-number="3.13" class="anchored" data-anchor-id="errors-warnings"><span class="header-section-number">3.13</span> Errors &amp; warnings</h2>
 <p>This section explains:</p>
 <ul>
-<li>The difference between errors and warnings<br>
+<li>The difference between errors and warnings.<br>
 </li>
-<li>General syntax tips for writing R code<br>
+<li>General syntax tips for writing R code.<br>
 </li>
-<li>Code assists</li>
+<li>Code assists.</li>
 </ul>
 <p>Common errors and warnings and troubleshooting tips can be found in the page on <a href="../new_pages/errors.html">Errors and help</a>.</p>
 <!-- ======================================================= -->
@@ -2751,10 +2751,10 @@ This assignment operator can also be written as <code>=</code>. We advise use of
 <h3 class="unnumbered anchored" data-anchor-id="general-syntax-tips">General syntax tips</h3>
 <p>A few things to remember when writing commands in R, to avoid errors and warnings:</p>
 <ul>
-<li>Always close parentheses - tip: count the number of opening “(” and closing parentheses “)” for each code chunk</li>
-<li>Avoid spaces in column and object names. Use underscore ( _ ) or periods ( . ) instead</li>
-<li>Keep track of and remember to separate a function’s arguments with commas</li>
-<li>R is case-sensitive, meaning <code>Variable_A</code> is <em>different</em> from <code>variable_A</code></li>
+<li>Always close parentheses - tip: count the number of opening “(” and closing parentheses “)” for each code chunk.</li>
+<li>Avoid spaces in column and object names. Use underscore ( _ ) or periods ( . ) instead.</li>
+<li>Keep track of and remember to separate a function’s arguments with commas.</li>
+<li>R is case-sensitive, meaning <code>Variable_A</code> is <em>different</em> from <code>variable_A</code>.</li>
 </ul>
 <!-- ======================================================= -->
 </section>
@@ -3346,7 +3346,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","closeEffect":"zoom","selector":".lightbox","loop":false,"openEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","descPosition":"bottom","openEffect":"zoom","loop":false,"selector":".lightbox"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
