--- a/html_outputs/new_pages/data_used.html
+++ b/html_outputs/new_pages/data_used.html
@@ -878,7 +878,7 @@ cookieconsent.run({
 <p><a href="https://github.com/WorldHealthOrganization/godata/blob/master/analytics/r-reporting/data/contacts_clean.rds?raw=true" class="download-button"> Click to download <span>the contact registration data (.rds file)</span> </a></p>
 <p><a href="https://github.com/WorldHealthOrganization/godata/blob/master/analytics/r-reporting/data/followups_clean.rds?raw=true" class="download-button"> Click to download <span>the contact follow-up data (.rds file)</span> </a></p>
 <p><span style="color: black;"><strong><em>NOTE:</em></strong> Structured contact tracing data from other software (e.g.&nbsp;KoBo, DHIS2 Tracker, CommCare) may look different. If you would like to contribute alternative sample data or content for this page, please <a href="https://epirhandbook.com/#r-for-applied-epidemiology-and-public-health">contact us</a>.</span></p>
-<p><span style="color: darkgreen;"><strong><em>TIP:</em></strong> If you are deploying Go.Data and want to connect to your instance’s API, see the Import and export page <a href="#import_api">(API section)</a> and the <a href="https://worldhealthorganization.github.io/godata/">Go.Data Community of Practice</a>.</span></p>
+<p><span style="color: darkgreen;"><strong><em>TIP:</em></strong> If you are deploying Go.Data and want to connect to your instance’s API, see the Import and export page <a href="importing.html#import_api">(API section)</a> and the <a href="https://worldhealthorganization.github.io/godata/">Go.Data Community of Practice</a>.</span></p>
 </section>
 <section id="gis" class="level4 unnumbered">
 <h4 class="unnumbered anchored" data-anchor-id="gis">GIS</h4>
@@ -891,7 +891,7 @@ cookieconsent.run({
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/download_shp.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1"><img src="../images/download_shp.png" class="quarto-figure quarto-figure-center figure-img" style="height:50.0%"></a></p>
+<p><a href="../images/download_shp.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1"><img src="../images/download_shp.png" class="quarto-figure quarto-figure-center figure-img" style="height:50.0%" width="918"></a></p>
 </figure>
 </div>
 </div>
@@ -1562,7 +1562,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom"});
+<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","selector":".lightbox","loop":false,"openEffect":"zoom","descPosition":"bottom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
