--- a/html_outputs/new_pages/r_projects.html
+++ b/html_outputs/new_pages/r_projects.html
@@ -758,19 +758,19 @@ cookieconsent.run({
 <h2 data-number="6.1" class="anchored" data-anchor-id="suggested-use"><span class="header-section-number">6.1</span> Suggested use</h2>
 <p>A common, efficient, and trouble-free way to use R is to combine these 3 elements. One discrete work project is hosted within one R project. Each element is described in the sections below.</p>
 <ol type="1">
-<li>An <strong>R project</strong>
+<li>An <strong>R project</strong>.
 <ul>
 <li>A self-contained working environment with folders for data, scripts, outputs, etc.<br>
 </li>
 </ul></li>
-<li>The <strong>here</strong> package for relative filepaths
+<li>The <strong>here</strong> package for relative filepaths.
 <ul>
-<li>Filepaths are written relative to the root folder of the R project - see <a href="../new_pages/importing.html">Import and export</a> for more information<br>
+<li>Filepaths are written relative to the root folder of the R project - see <a href="../new_pages/importing.html">Import and export</a> for more information.<br>
 </li>
 </ul></li>
-<li>The <strong>rio</strong> package for importing/exporting
+<li>The <strong>rio</strong> package for importing/exporting.
 <ul>
-<li><code>import()</code> and <code>export()</code> handle any file type by by its extension (e.g.&nbsp;.csv, .xlsx, .png)</li>
+<li><code>import()</code> and <code>export()</code> handle any file type by by its extension (e.g.&nbsp;.csv, .xlsx, .png).</li>
 </ul></li>
 </ol>
 <!-- ======================================================= -->
@@ -1434,7 +1434,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"loop":false,"selector":".lightbox","descPosition":"bottom","closeEffect":"zoom","openEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"selector":".lightbox","closeEffect":"zoom","loop":false,"openEffect":"zoom","descPosition":"bottom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
