updates to various pages

--- a/html_outputs/new_pages/basics.html
+++ b/html_outputs/new_pages/basics.html
@@ -916,21 +916,8 @@ as of rio 1.0.3.
 </section>
 <section id="twitter" class="level3 unnumbered">
 <h3 class="unnumbered anchored" data-anchor-id="twitter">Twitter</h3>
-<p>R has a vibrant twitter community where you can learn tips, shortcuts, and news - follow these accounts:</p>
 <ul>
-<li>Follow us! <a href="https://twitter.com/epirhandbook">@epiRhandbook</a><br>
-</li>
-<li>R Function A Day <a href="https://twitter.com/rfunctionaday">@rfuntionaday</a> is an <em>incredible</em> resource<br>
-</li>
-<li>RStudio <a href="https://twitter.com/rstudio?lang=en">@RStudio</a><br>
-</li>
-<li>RStudio Tips <a href="https://twitter.com/rstudiotips">@rstudiotips</a><br>
-</li>
-<li>R-Bloggers <a href="https://twitter.com/Rbloggers">@Rbloggers</a><br>
-</li>
-<li>R-ladies <a href="https://twitter.com/RLadiesGlobal">@RLadiesGlobal</a><br>
-</li>
-<li>Hadley Wickham <a href="https://twitter.com/hadleywickham?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">@hadleywickham</a></li>
+<li>Follow us! <a href="https://twitter.com/epirhandbook">@epiRhandbook</a></li>
 </ul>
 <p>Also:</p>
 <p><strong>#epitwitter</strong> and <strong>#rstats</strong></p>
@@ -3346,7 +3333,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","selector":".lightbox","loop":false,"descPosition":"bottom","openEffect":"zoom"});
+<script>var lightboxQuarto = GLightbox({"selector":".lightbox","openEffect":"zoom","loop":false,"closeEffect":"zoom","descPosition":"bottom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
