--- a/html_outputs/new_pages/data_used.html
+++ b/html_outputs/new_pages/data_used.html
@@ -877,14 +877,15 @@ cookieconsent.run({
 <p><a href="https://github.com/WorldHealthOrganization/godata/blob/master/analytics/r-reporting/data/cases_clean.rds?raw=true" class="download-button"> Click to download <span>the case investigation data (.rds file)</span> </a></p>
 <p><a href="https://github.com/WorldHealthOrganization/godata/blob/master/analytics/r-reporting/data/contacts_clean.rds?raw=true" class="download-button"> Click to download <span>the contact registration data (.rds file)</span> </a></p>
 <p><a href="https://github.com/WorldHealthOrganization/godata/blob/master/analytics/r-reporting/data/followups_clean.rds?raw=true" class="download-button"> Click to download <span>the contact follow-up data (.rds file)</span> </a></p>
+<p><a href="https://github.com/appliedepi/epiRhandbook_eng/blob/master/data/contact_tracing.rds?raw=true" class="download-button"> Click to download <span>the contact follow-up data (.rds file)</span> </a></p>
 <p><span style="color: black;"><strong><em>NOTE:</em></strong> Structured contact tracing data from other software (e.g.&nbsp;KoBo, DHIS2 Tracker, CommCare) may look different. If you would like to contribute alternative sample data or content for this page, please <a href="https://epirhandbook.com/#r-for-applied-epidemiology-and-public-health">contact us</a>.</span></p>
-<p><span style="color: darkgreen;"><strong><em>TIP:</em></strong> If you are deploying Go.Data and want to connect to your instance’s API, see the Import and export page <a href="importing.html#import_api">(API section)</a> and the <a href="https://worldhealthorganization.github.io/godata/">Go.Data Community of Practice</a>.</span></p>
+<p><span style="color: darkgreen;"><strong><em>TIP:</em></strong> If you are deploying Go.Data and want to connect to your instance’s API, see the Import and export page <a href="#import_api">(API section)</a> and the <a href="https://worldhealthorganization.github.io/godata/">Go.Data Community of Practice</a>.</span></p>
 </section>
 <section id="gis" class="level4 unnumbered">
 <h4 class="unnumbered anchored" data-anchor-id="gis">GIS</h4>
 <p>Shapefiles have many sub-component files, each with a different file extention. One file will have the “.shp” extension, but others may have “.dbf”, “.prj”, etc. You will need to have all of these different files within the same folder to use the shapefile.</p>
 <p>The <a href="../new_pages/gis.html">GIS basics</a> page provides links to the <em>Humanitarian Data Exchange</em> website where you can download the shapefiles directly as zipped files.</p>
-<p>For example, the health facility points data can be downloaded <a href="https://data.humdata.org/dataset/hotosm_sierra_leone_health_facilities">here</a>. Download “hotosm_sierra_leone_health_facilities_points_shp.zip”. Once saved to your computer, “unzip” the folder. You will see several files with different extensions (e.g.&nbsp;“.shp”, “.prj”, “.shx”) - all these must be saved to the same folder on your computer. Then to import into R, provide the file path and name of the “.shp” file to <code>st_read()</code> from the <strong>sf</strong> package (as described in the <a href="../new_pages/gis.html">GIS basics</a> page).</p>
+<p>For example, the health facility points data can be downloaded <a href="https://data.humdata.org/dataset/hotosm_sle_health_facilities">here</a>. Download “hotosm_sierra_leone_health_facilities_points_shp.zip”. Once saved to your computer, “unzip” the folder. You will see several files with different extensions (e.g.&nbsp;“.shp”, “.prj”, “.shx”) - all these must be saved to the same folder on your computer. Then to import into R, provide the file path and name of the “.shp” file to <code>st_read()</code> from the <strong>sf</strong> package (as described in the <a href="../new_pages/gis.html">GIS basics</a> page).</p>
 <p>If you follow Option 1 to download all the example data (via our R package <strong>epirhandbook</strong>), all the shapefiles are included.</p>
 <p>Alternatively, you can download the shapefiles from the R Handbook Github “data” folder (see the “gis” sub-folder). However, be aware that you will need to download <em>each</em> sub-file individually to your computer. In Github, click on each file individually and download them by clicking on the “Download” button. Below, you can see how the shapefile “sle_adm3” consists of many files - each of which would need to be downloaded from Github.</p>
 <div class="cell" data-layout-align="center">
@@ -899,7 +900,7 @@ cookieconsent.run({
 </section>
 <section id="phylogenetic-trees" class="level4 unnumbered">
 <h4 class="unnumbered anchored" data-anchor-id="phylogenetic-trees">Phylogenetic trees</h4>
-<p>See the page on <a href="../new_pages/phylogenetic_trees.html">Phylogenetic trees</a>. Newick file of phylogenetic tree constructed from whole genome sequencing of 299 Shigella sonnei samples and corresponding sample data (converted to a text file). The Belgian samples and resulting data are kindly provided by the Belgian NRC for Salmonella and Shigella in the scope of a project conducted by an <a href="https://www.ecdc.europa.eu/en/epiet-euphem">ECDC EUPHEM Fellow</a>, and will also be published in a manuscript. The international data are openly available on public databases (<a href="https://www.ncbi.nlm.nih.gov/">National Center for Biotechnology Information, NCBI</a>) and have been previously published.</p>
+<p>See the page on <a href="../new_pages/phylogenetic_trees.html">Phylogenetic trees</a>. Newick file of phylogenetic tree constructed from whole genome sequencing of 299 Shigella sonnei samples and corresponding sample data (converted to a text file). The Belgian samples and resulting data are kindly provided by the Belgian NRC for Salmonella and Shigella in the scope of a project conducted by an <a href="https://www.ecdc.europa.eu/en/epiet-euphem">ECDC EUPHEM Fellow</a>, and are published <a href="https://www.mdpi.com/2076-2607/9/4/767">here</a> with the sequences found <a href="https://www.ncbi.nlm.nih.gov/bioproject/PRJNA698782">here</a>. The international data are openly available on public databases (<a href="https://www.ncbi.nlm.nih.gov/">National Center for Biotechnology Information, NCBI</a>) and have been previously published.</p>
 <ul>
 <li>To download the “Shigella_tree.txt” phylogenetic tree file, right-click this <a href="https://github.com/appliedepi/epirhandbook_eng/raw/master/data/phylo/Shigella_tree.txt">link</a> (Cmd+click for Mac) and select “Save link as”.<br>
 </li>
@@ -1562,7 +1563,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     </div>
   </div>
 </footer>
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","selector":".lightbox","loop":false,"openEffect":"zoom","descPosition":"bottom"});
+<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","selector":".lightbox","closeEffect":"zoom","loop":false,"openEffect":"zoom"});
 window.onload = () => {
   lightboxQuarto.on('slide_before_load', (data) => {
     const { slideIndex, slideNode, slideConfig, player, trigger } = data;
